Change titles and add image icon

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-item>
+      <ion-title>
+        About
+      </ion-title>
+    </ion-item>
+    <ion-item>
+      <ion-title>
+        Gallery
+      </ion-title>
+    </ion-item>
+    
   </ion-toolbar>
 </ion-header>
 
@@ -15,3 +23,4 @@
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
+
