Refactor app code

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Photo Tips
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,19 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Tips</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-text  color="primary"><h1>Camera Basics</h1></ion-text>
+  <ion-text>
+    <p>
+    Before you dive into taking photos, you need to understand how your equipment works. Learning about the features and mechanics of your camera – whether that’s a point-and-shoot, smartphone, or DSLR – is vital.
+    
+    For example, knowing how to turn off the automatic flash, change the shutter speed or aperture, or even understanding the zoom function, can make or break your final photos. It’s always best to refer to your camera’s manual when understanding the specifics, but you can also refer to our resource on how to take good pictures with your smartphone for phone based photography basics.</p>
+  </ion-text>
+
+  <ion-text color="secondary">
+    <h1>Camera Features For Beginners</h1>
+  </ion-text>
 </ion-content>
