Add content and style pages

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -23,5 +23,21 @@
 
   <ion-text color="secondary">
     <h1>Camera Features For Beginners</h1>
+    <ion-content>
+      <ul>
+        <li><b style="color: #008000;">Viewfinder</b> (and grid mode): You can use the viewfinder to help strategize the composition of your photo. Grid mode turns on a helpful planning grid within the screen.</li>
+        <li><b style="color: #008000;">Zoom:</b> While it’s generally recommended to stay away from zooming, as this reduces quality in pictures, it’s important to understand the limitations and benefits of your camera’s zoom.</li>
+        <li><b style="color: #008000;">Focus:</b> Most cameras come with auto focus, but you should also figure out how to change this setting to manual once you get comfortable with other photography basics. This will help you take more visually interesting photos.</li>
+        <li><b style="color: #008000;">Color Balance:</b> Adjust your color balance settings depending on the lighting to help make sure your photos don’t come out in undesired colors.</li>
+        <li><b style="color: #008000;">Aperture:</b> Adjust your aperture settings so you’re better able to control the light in your images.</li>
+        <li><b style="color: #008000;">Shutter Speed:</b> Too fast a shutter speed and your images come out dark, too slow and they’ll come out blurry. Try to find a balance.</li>
+        <li><b style="color: #008000;">Flash:</b> While most photographers try to stick to external light sources, you still need to understand the basics behind your camera’s flash.</li>
+        <li><b style="color: #008000;">Manual Mode</b> (and additional modes): Modes such as sport, portrait, landscape and more help you automatically adjust for the subject of your photo. Taking your settings off of automatic will give you more control in your photography.</li>
+        <li><b style="color: #008000;">Light Balance/Exposure:</b> Adjust this depending on how much light you want in your images before you take them.</li>
+        <li><b style="color: #008000;">ISO:</b> Your ISO, or the sensitivity of your camera to light, will affect how much photo grain appears in your images</li>
+        <li><b style="color: #008000;">Histogram:</b> Your histogram is the graphical representation of color values displayed in your camera. Make sure those values are where you want them to be when shooting.</li>
+        <li><b style="color: #008000;">RAW vs. JPEG:</b> These files types dictate how much space you’ll have in your memory cards along with how advance your editing will be post photoshoot. If shooting in RAW, the larger file type, plan to bring extra memory cards</li>
+      </ul>
+    </ion-content>
   </ion-text>
 </ion-content>
